# plottercontroll

./: Cargo.toml  README.md  build.rs
src/: app.rs  cli.rs  estimator.rs  gcode_gen.rs  geometry.rs  gui.rs  hershey.rs  main.rs  optimizer.rs  profiles.rs  project.rs  serial.rs  text_editor.rs
src/importers/: mod.rs  png.rs  svg.rs  text.rs
src/profiles/: default.txt  ender5pro_plotter.txt
