[package]
name = "plottercontroll"
version = "0.1.0"
edition = "2021"
description = "A pen plotter controller for Creality Ender 5 Pro with Marlin firmware"

[features]
default = ["gui"]
gui = ["eframe", "egui", "rfd"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serialport = "4.3"
usvg = { version = "0.42", default-features = false, features = ["text"] }
resvg = "0.42"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
ttf-parser = "0.21"
lyon = "1"
log = "0.4"
env_logger = "0.11"
rfd = { version = "0.15", optional = true }
eframe = { version = "0.30", optional = true, features = ["default"] }
egui = { version = "0.30", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = true
